--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,14 @@ authors = ["Julian Stephens <julian@julianstephens.net>"]
 python = "^3.8"
 Flask = "^2.1.2"
 Flask-SQLAlchemy = "^2.5.1"
-Flask-Assets = "^2.0"
-pyScss = "^1.4.0"
+psycopg2-binary = "^2.9.3"
+Flask-RESTful = "^0.3.9"
+shortuuid = "^1.0.9"
+marshmallow = "^3.16.0"
+Flask-Seeder = "^1.2.0"
+Flask-Migrate = "^3.1.0"
+alembic = "^1.8.0"
+flask-serialize = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
